--- a/QuantumGateVisualization.ipynb
+++ b/QuantumGateVisualization.ipynb
@@ -30,10 +30,16 @@
       "source": [
         "\n",
         "\n",
+        "> Add blockquote\n",
         "\n",
-        "*   Before running the codes, please install qiskit in the terminal by using the\n",
-        "commands: \\\\\n",
-        "pip install qiskit \\\\\n",
+        "\n",
+        "\n",
+        "\n",
+        "Before running the codes, please install qiskit in the terminal by using the\n",
+        "commands:\n",
+        "\n",
+        "pip install qiskit\n",
+        "\n",
         "pip install 'qiskit[visualization]'\n",
         "\n",
         "# Block Sphere Visualization and Quantum Gates\n",
@@ -81,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -166,7 +172,7 @@
         "id": "Vf_HQGnbLNum",
         "outputId": "20c417a4-caa0-49b5-855a-5819581773d2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,7 +237,7 @@
         "id": "qu2OASo0qKJt",
         "outputId": "188523d2-1ff9-4bb2-f248-620b56a1703c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,7 +301,7 @@
         "id": "eKFINQXTMH7x",
         "outputId": "e20ef567-27a1-4ac9-b81e-c8d4f82d2cf2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,7 +405,7 @@
         "id": "c_x-CuF4tCIk",
         "outputId": "feb7c65f-4f83-425a-e02f-d22a945bfc0a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,7 +439,7 @@
         "Next, we implement a X gate to a single qubit state.\n",
         "\n",
         "The X gate is another fundamental single-qubit gates in quantum computing, also known as the Pauli-X gate or quantum NOT gate, flips the state of a qubit from $|0\\rangle$ to $|1\\rangle$ and vice versa. It is analogous to the classical NOT gate.\n",
-        "The matrix representation of the Hadamard gate is: $X = \\begin{bmatrix} 1 & 0 \\\\ 0 & 1 \\end{bmatrix}$\n",
+        "The matrix representation of the Hadamard gate is: $X = \\begin{bmatrix} 1 & 0 \\\\ 0 & 1 \\end{bmatrix}$.\n",
         "\n",
         "Now apply the X gate to $|0\\rangle$:\n",
         "$X|0\\rangle =\n",
@@ -510,7 +516,7 @@
         "id": "981OWpwPuTmn",
         "outputId": "b209af8a-8e70-4517-c9e7-745df3f28fa3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,7 +578,7 @@
         "bloch_vector = [np.sin(theta) * np.cos(phi), np.sin(theta) * np.sin(phi), np.cos(theta)]\n",
         "plot_bloch_vector(bloch_vector)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,7 +687,7 @@
         "id": "mV2DEqgqVwU8",
         "outputId": "37c2c944-b4ab-41a6-99cf-825ba03552c1"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -743,7 +749,7 @@
         "id": "zkOiOZnxV2xY",
         "outputId": "55ae9c61-936a-4881-9cdd-4e8728188c51"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
