--- a/QuantumGateVisualization.ipynb
+++ b/QuantumGateVisualization.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,30 +16,15 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/JiaUF/OnlineQuantumLab/blob/main/QuantumGateVisualization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "\n",
         "\n",
-        "> Add blockquote\n",
+        "> Before running the codes, please install qiskit in the terminal by using the commands: \\\\\n",
+        "> pip install qiskit  \n",
+        "> pip install 'qiskit[visualization]'\n",
         "\n",
         "\n",
         "\n",
-        "\n",
-        "Before running the codes, please install qiskit in the terminal by using the\n",
-        "commands:\n",
-        "\n",
-        "pip install qiskit\n",
-        "\n",
-        "pip install 'qiskit[visualization]'\n",
         "\n",
         "# Block Sphere Visualization and Quantum Gates\n",
         "\n",
