--- a/QuantumGateVisualization.ipynb
+++ b/QuantumGateVisualization.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/JiaUF/OnlineQuantumLab/blob/main/QuantumGateVisualization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -423,9 +434,10 @@
         "Next, we implement a X gate to a single qubit state.\n",
         "\n",
         "The X gate is another fundamental single-qubit gates in quantum computing, also known as the Pauli-X gate or quantum NOT gate, flips the state of a qubit from $|0\\rangle$ to $|1\\rangle$ and vice versa. It is analogous to the classical NOT gate.\n",
-        "The matrix representation of the Hadamard gate is: $X = \\begin{bmatrix} 1 & 0 \\\\ 0 & 1 \\end{bmatrix}$.\n",
         "\n",
-        "Now apply the X gate to $|0\\rangle$:\n",
+        "The matrix representation of the X gate is: $X = \\begin{bmatrix} 1 & 0 \\\\ 0 & 1 \\end{bmatrix}$\n",
+        "\n",
+        "Now apply the Hadamard gate to $|0\\rangle$:\n",
         "$X|0\\rangle =\n",
         "\\begin{bmatrix}\n",
         "0 & 1 \\\\\n",
@@ -442,7 +454,7 @@
         "\\end{bmatrix} = |1\\rangle$\n",
         "\n",
         "Apply the X gate to $|1\\rangle$:\n",
-        "$X|0\\rangle =\n",
+        "$X|1\\rangle =\n",
         "\\begin{bmatrix}\n",
         "0 & 1 \\\\\n",
         "1 & 0\n",
@@ -455,7 +467,7 @@
         "\\begin{bmatrix}\n",
         "1 \\\\\n",
         "0\n",
-        "\\end{bmatrix} = |1\\rangle$\n"
+        "\\end{bmatrix} = |0\\rangle$\n"
       ],
       "metadata": {
         "id": "0wcNukaYTApX"
