--- a/QuantumGateVisualization.ipynb
+++ b/QuantumGateVisualization.ipynb
@@ -435,7 +435,12 @@
         "\n",
         "The X gate is another fundamental single-qubit gates in quantum computing, also known as the Pauli-X gate or quantum NOT gate, flips the state of a qubit from $|0\\rangle$ to $|1\\rangle$ and vice versa. It is analogous to the classical NOT gate.\n",
         "\n",
-        "The matrix representation of the X gate is: $X = \\begin{bmatrix} 1 & 0 \\\\ 0 & 1 \\end{bmatrix}$ \\\\\n",
+        "The matrix representation of the Hadamard gate is: $X =\n",
+        "\\begin{bmatrix}\n",
+        "0 & 1 \\\\\n",
+        "1 & 0\n",
+        "\\end{bmatrix}$\n",
+        "\n",
         "Apply the Hadamard gate to $|0\\rangle$:\n",
         "$X|0\\rangle =\n",
         "\\begin{bmatrix}\n",
@@ -450,7 +455,8 @@
         "\\begin{bmatrix}\n",
         "0 \\\\\n",
         "1\n",
-        "\\end{bmatrix} = |1\\rangle$ \\\\\n",
+        "\\end{bmatrix} = |1\\rangle$\n",
+        "\n",
         "Apply the X gate to $|1\\rangle$:\n",
         "$X|1\\rangle =\n",
         "\\begin{bmatrix}\n",
