--- a/QuantumGateVisualization.ipynb
+++ b/QuantumGateVisualization.ipynb
@@ -435,13 +435,13 @@
         "\n",
         "The X gate is another fundamental single-qubit gates in quantum computing, also known as the Pauli-X gate or quantum NOT gate, flips the state of a qubit from $|0\\rangle$ to $|1\\rangle$ and vice versa. It is analogous to the classical NOT gate.\n",
         "\n",
-        "The matrix representation of the Hadamard gate is: $X =\n",
+        "The matrix representation of the X gate is: $X =\n",
         "\\begin{bmatrix}\n",
         "0 & 1 \\\\\n",
         "1 & 0\n",
         "\\end{bmatrix}$\n",
         "\n",
-        "Apply the Hadamard gate to $|0\\rangle$:\n",
+        "Apply the X gate to |0>:\n",
         "$X|0\\rangle =\n",
         "\\begin{bmatrix}\n",
         "0 & 1 \\\\\n",
