--- a/QuantumGateVisualization.ipynb
+++ b/QuantumGateVisualization.ipynb
@@ -194,7 +194,7 @@
       "cell_type": "markdown",
       "source": [
         "### Task 2\n",
-        "Now, we want to visualize a state $|+\\rangle = \\frac{1}{\\sqrt{2}}(|0⟩+|1⟩)$, which is the superposition of state |0⟩ and |1⟩. You can see that the $|+\\rangle state points to the equator along the positive X axis."
+        "Now, we want to visualize a state $|+\\rangle = \\frac{1}{\\sqrt{2}}(|0⟩+|1⟩)$, which is the superposition of state |0⟩ and |1⟩. You can see that the $|+\\rangle$ state points to the equator along the positive X axis."
       ],
       "metadata": {
         "id": "Wcuf8FJSvoML"
@@ -435,11 +435,11 @@
         "\n",
         "The X gate is another fundamental single-qubit gates in quantum computing, also known as the Pauli-X gate or quantum NOT gate, flips the state of a qubit from $|0\\rangle$ to $|1\\rangle$ and vice versa. It is analogous to the classical NOT gate.\n",
         "\n",
-        "The matrix representation of the X gate is: $X =\n",
+        "The matrix representation of the X gate is: $X$ =\n",
         "\\begin{bmatrix}\n",
         "0 & 1 \\\\\n",
         "1 & 0\n",
-        "\\end{bmatrix}$\n",
+        "\\end{bmatrix}\n",
         "\n",
         "Apply the X gate to |0>:\n",
         "$X|0\\rangle =\n",
