--- a/QuantumGateVisualization.ipynb
+++ b/QuantumGateVisualization.ipynb
@@ -435,13 +435,13 @@
         "\n",
         "The X gate is another fundamental single-qubit gates in quantum computing, also known as the Pauli-X gate or quantum NOT gate, flips the state of a qubit from $|0\\rangle$ to $|1\\rangle$ and vice versa. It is analogous to the classical NOT gate.\n",
         "\n",
-        "The matrix representation of the X gate is: $X$ =\n",
+        "The matrix representation of the X gate is: $X =\n",
         "\\begin{bmatrix}\n",
         "0 & 1 \\\\\n",
         "1 & 0\n",
-        "\\end{bmatrix}\n",
+        "\\end{bmatrix}$\n",
         "\n",
-        "Apply the X gate to |0>:\n",
+        "Apply the X gate to $|0\\rangle$:\n",
         "$X|0\\rangle =\n",
         "\\begin{bmatrix}\n",
         "0 & 1 \\\\\n",
@@ -475,6 +475,45 @@
       ],
       "metadata": {
         "id": "0wcNukaYTApX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Task 3: Hadamard Gate\n",
+        "Next, we implement a Hadamard gate by constructing a quantum circuit that applies only the Hadamard operation to a single qubit.\n",
+        "\n",
+        "The Hadamard gate ($H$) is one of the most fundamental single-qubit gates in quantum computing.\n",
+        "It creates superposition by transforming the basis states $|0\\rangle$ and $|1\\rangle$ into equal-weighted linear combinations.\n",
+        "\n",
+        "The matrix representation of the Hadamard gate is: $H = \\frac{1}{\\sqrt{2}} \\begin{bmatrix}\n",
+        "1 & 1 \\\\\n",
+        "1 & -1\n",
+        "\\end{bmatrix}$\n",
+        "\n",
+        "Now apply the Hadamard gate to $|0\\rangle$:\n",
+        "$H|0\\rangle = \\frac{1}{\\sqrt{2}}\n",
+        "\\begin{bmatrix}\n",
+        "1 & 1 \\\\\n",
+        "1 & -1\n",
+        "\\end{bmatrix}\n",
+        "\\begin{bmatrix}\n",
+        "1 \\\\\n",
+        "0\n",
+        "\\end{bmatrix}\n",
+        "= \\frac{1}{\\sqrt{2}}\n",
+        "\\begin{bmatrix}\n",
+        "1 \\\\\n",
+        "1\n",
+        "\\end{bmatrix}$\n",
+        "\n",
+        "So the resulting state is: $|\\psi\\rangle = \\frac{1}{\\sqrt{2}} (|0\\rangle + |1\\rangle) = |+\\rangle$\n",
+        "\n",
+        "This is an equal superposition of $|0\\rangle$ and $|1\\rangle$, and on the Bloch sphere, it corresponds to a vector pointing along the positive X-axis.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "l_RoDQG7dTDy"
       }
     },
     {
@@ -613,8 +652,7 @@
         "Its matrix form is: $Z = \\begin{bmatrix} 1 & 0 \\\\ 0 & -1 \\end{bmatrix}$\n",
         "\n",
         "Now apply the Z gate to $|0\\rangle$:\n",
-        "$Z|0\\rangle =\n",
-        "\\begin{bmatrix}\n",
+        "$Z|0\\rangle=\\begin{bmatrix}\n",
         "1 & 0 \\\\\n",
         "0 & -1\n",
         "\\end{bmatrix}\n",
@@ -626,7 +664,7 @@
         "\\begin{bmatrix}\n",
         "1 \\\\\n",
         "0\n",
-        "\\end{bmatrix} = |0\\rangle$\n",
+        "\\end{bmatrix}=|0\\rangle$\n",
         "\n",
         "Apply the Z gate to $|1\\rangle$:\n",
         "$Z|0\\rangle =\n",
@@ -642,7 +680,7 @@
         "-\\begin{bmatrix}\n",
         "0 \\\\\n",
         "1\n",
-        "\\end{bmatrix} = -|1\\rangle$"
+        "\\end{bmatrix}=-|1\\rangle$"
       ],
       "metadata": {
         "id": "WQz7_JdoUXAZ"
