--- a/QuantumGateVisualization.ipynb
+++ b/QuantumGateVisualization.ipynb
@@ -30,7 +30,7 @@
       "source": [
         "\n",
         "\n",
-        "> Before running the codes, please install qiskit in the terminal by using the commands: \\\\\n",
+        "> Before running the codes, please install qiskit in the terminal by using the commands:\n",
         "> pip install qiskit  \n",
         "> pip install 'qiskit[visualization]'\n",
         "\n",
@@ -475,40 +475,6 @@
       ],
       "metadata": {
         "id": "0wcNukaYTApX"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Task X: X Gate\n",
-        "Next, we implement a X gate b to a single qubit state.\n",
-        "\n",
-        "The X gate is another most fundamental single-qubit gates in quantum computing, also known as the Pauli-X gate or quantum NOT gate. It flips the state of a qubit from $|0\\rangle$ to $|1\\rangle$ and vice versa, and is analogous to the classical NOT gate.\n",
-        "\n",
-        "The matrix representation of the X gate is: $X = \\frac{1}{\\sqrt{2}} \\begin{bmatrix}\n",
-        "0 & 1 \\\\\n",
-        "1 & 0\n",
-        "\\end{bmatrix}$\n",
-        "\n",
-        "Now apply the X gate to $|0\\rangle$:\n",
-        "$X|0\\rangle =\n",
-        "\\begin{bmatrix}\n",
-        "0 & 1 \\\\\n",
-        "1 & 0\n",
-        "\\end{bmatrix}\n",
-        "\\begin{bmatrix}\n",
-        "1 \\\\\n",
-        "0\n",
-        "\\end{bmatrix}\n",
-        "=\n",
-        "\\begin{bmatrix}\n",
-        "0 \\\\\n",
-        "1\n",
-        "\\end{bmatrix}$\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "l_RoDQG7dTDy"
       }
     },
     {
