--- a/QuantumGateVisualization.ipynb
+++ b/QuantumGateVisualization.ipynb
@@ -70,6 +70,15 @@
         "\n",
         "This parameterization allows us to represent any qubit on the surface  of a unit sphere, which we call as Bloch sphere.\n",
         "\n",
+        "### Basis\n",
+        "\n",
+        " * The states $|0\\rangle$ and $|1\\rangle$ are the conventional basis states when measured along the z-direction. These two basis states point to the north pole and south pole of the Bloch sphere, respectively.\n",
+        "\n",
+        " * Another commonly used basis set is the $|+\\rangle$ and $|-\\rangle$ states, which correspond to measurements along the x-direction. You will see later that they point along the positive and negative x-directions on the Bloch sphere.\n",
+        "\n",
+        " * Basis transformation is given by: $|+\\rangle = \\frac{1}{\\sqrt{2}}(|0⟩+|1⟩)$ and $|-\\rangle = \\frac{1}{\\sqrt{2}}(|0⟩-|1⟩)$. You can make the transformationg by applying Hadamard gate, which we are going to discuss later in this module.\n",
+        "\n",
+        "\n",
         "---\n",
         "\n",
         "Now, let us take a look at how do we visualize quantum state for a single qubit in a Bloch sphere.\n",
