--- a/QuantumGateVisualization.ipynb
+++ b/QuantumGateVisualization.ipynb
@@ -784,9 +784,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Questions:\n",
-        "1. What quantum state you obtain when applying Hadamard gate to $|+\\rangle$ state?\n",
-        "2. What quantum state you obtain when applying Z gate to $|+\\rangle$ state?"
+        "### Summary:\n",
+        "\n",
+        "In this module, we introduced the fundamentals of single-qubit quantum states, explored how to visualize them on the Bloch sphere, and examined basic quantum gates—specifically the X, Z, and Hadamard gates. You saw how each gate transforms the qubit's position on the Bloch sphere and alters its quantum state. Feel free to experiment in the Jupyter notebook by applying different combinations of gates to build your intuition about quantum state evolution.\n",
+        "\n",
+        "### Questions:\n",
+        "1. What is the resulting quantum state when a Hadamard gate is applied to the $|+\\rangle$ state?\n",
+        "2. What happens when you apply the Hadamard gate twice in a row to any quantum state?\n",
+        "3. How does the Z gate transform the $|+\\rangle$ state on the Bloch sphere?"
       ],
       "metadata": {
         "id": "hzn2X-N3Wt80"
