--- a/QuantumGateVisualization.ipynb
+++ b/QuantumGateVisualization.ipynb
@@ -30,7 +30,7 @@
       "source": [
         "\n",
         "\n",
-        "> Before running the codes, please install qiskit in the terminal by using the commands:\n",
+        "> Before running the codes, please install qiskit in the Colab terminal by using the commands:\n",
         "\n",
         "> pip install qiskit  \n",
         "> pip install 'qiskit[visualization]'\n",
@@ -445,14 +445,22 @@
         "\n",
         "The X gate is another fundamental single-qubit gates in quantum computing, also known as the Pauli-X gate or quantum NOT gate, flips the state of a qubit from $|0\\rangle$ to $|1\\rangle$ and vice versa. It is analogous to the classical NOT gate.\n",
         "\n",
-        "The matrix representation of the X gate is: $X =\n",
+        "The matrix representation of the X gate is: X $ =\n",
         "\\begin{bmatrix}\n",
         "0 & 1 \\\\\n",
         "1 & 0\n",
-        "\\end{bmatrix}$\n",
+        "\\end{bmatrix}$\n"
+      ],
+      "metadata": {
+        "id": "0wcNukaYTApX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "Apply the X gate to $|0\\rangle$:\n",
-        "$X|0\\rangle =\n",
+        "X$|0\\rangle =\n",
         "\\begin{bmatrix}\n",
         "0 & 1 \\\\\n",
         "1 & 0\n",
@@ -468,7 +476,7 @@
         "\\end{bmatrix} = |1\\rangle$\n",
         "\n",
         "Apply the X gate to $|1\\rangle$:\n",
-        "$X|1\\rangle =\n",
+        "X$|1\\rangle =\n",
         "\\begin{bmatrix}\n",
         "0 & 1 \\\\\n",
         "1 & 0\n",
@@ -484,7 +492,7 @@
         "\\end{bmatrix} = |0\\rangle$\n"
       ],
       "metadata": {
-        "id": "0wcNukaYTApX"
+        "id": "e2TsaBPYXEqi"
       }
     },
     {
