--- a/QuantumGateVisualization.ipynb
+++ b/QuantumGateVisualization.ipynb
@@ -449,7 +449,7 @@
         "\\begin{bmatrix}\n",
         "0 & 1 \\\\\n",
         "1 & 0\n",
-        "\\end{bmatrix}$\n"
+        "\\end{bmatrix}$"
       ],
       "metadata": {
         "id": "0wcNukaYTApX"
