--- a/QuantumGateVisualization.ipynb
+++ b/QuantumGateVisualization.ipynb
@@ -458,9 +458,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
         "Apply the X gate to $|0\\rangle$:\n",
-        "X$|0\\rangle =\n",
+        "X\\$|0\\rangle =\n",
         "\\begin{bmatrix}\n",
         "0 & 1 \\\\\n",
         "1 & 0\n",
