--- a/QuantumGateVisualization.ipynb
+++ b/QuantumGateVisualization.ipynb
@@ -459,7 +459,7 @@
       "cell_type": "markdown",
       "source": [
         "Apply the X gate to $|0\\rangle$:\n",
-        "X\\$|0\\rangle =\n",
+        "$$X|0\\rangle =\n",
         "\\begin{bmatrix}\n",
         "0 & 1 \\\\\n",
         "1 & 0\n",
@@ -472,10 +472,10 @@
         "\\begin{bmatrix}\n",
         "0 \\\\\n",
         "1\n",
-        "\\end{bmatrix} = |1\\rangle$\n",
+        "\\end{bmatrix} = |1\\rangle$$\n",
         "\n",
         "Apply the X gate to $|1\\rangle$:\n",
-        "X$|1\\rangle =\n",
+        "$$X|1\\rangle =\n",
         "\\begin{bmatrix}\n",
         "0 & 1 \\\\\n",
         "1 & 0\n",
@@ -488,7 +488,7 @@
         "\\begin{bmatrix}\n",
         "1 \\\\\n",
         "0\n",
-        "\\end{bmatrix} = |0\\rangle$\n"
+        "\\end{bmatrix} = |0\\rangle$$\n"
       ],
       "metadata": {
         "id": "e2TsaBPYXEqi"
@@ -630,7 +630,7 @@
         "Its matrix form is: $Z = \\begin{bmatrix} 1 & 0 \\\\ 0 & -1 \\end{bmatrix}$\n",
         "\n",
         "Now apply the Z gate to $|0\\rangle$:\n",
-        "$Z|0\\rangle=\\begin{bmatrix}\n",
+        "$$Z|0\\rangle=\\begin{bmatrix}\n",
         "1 & 0 \\\\\n",
         "0 & -1\n",
         "\\end{bmatrix}\n",
@@ -642,10 +642,10 @@
         "\\begin{bmatrix}\n",
         "1 \\\\\n",
         "0\n",
-        "\\end{bmatrix}=|0\\rangle$\n",
+        "\\end{bmatrix}=|0\\rangle$$\n",
         "\n",
         "Apply the Z gate to $|1\\rangle$:\n",
-        "$Z|0\\rangle =\n",
+        "$$Z|0\\rangle =\n",
         "\\begin{bmatrix}\n",
         "1 & 0 \\\\\n",
         "0 & -1\n",
@@ -658,7 +658,7 @@
         "-\\begin{bmatrix}\n",
         "0 \\\\\n",
         "1\n",
-        "\\end{bmatrix}=-|1\\rangle$"
+        "\\end{bmatrix}=-|1\\rangle$$"
       ],
       "metadata": {
         "id": "WQz7_JdoUXAZ"
