--- a/QuantumGateVisualization.ipynb
+++ b/QuantumGateVisualization.ipynb
@@ -30,8 +30,13 @@
       "source": [
         "\n",
         "\n",
-        "> Before running the codes, please install qiskit in the Colab terminal by using the commands:\n",
+        "```\n",
+        "# This is formatted as code\n",
+        "```\n",
         "\n",
+        "\n",
+        "\n",
+        "> Before running the codes, please install qiskit in the Colab terminal by using the commands:\n",
         "> pip install qiskit  \n",
         "> pip install 'qiskit[visualization]'\n",
         "\n",
@@ -92,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -383,15 +388,15 @@
         "# Example state: apply Hadamard to |0⟩ → (|0⟩ + |1⟩)/√2\n",
         "sv = Statevector([1, 0])\n",
         "\n",
-        "# Define a circuit that applies a Hadamard gate\n",
+        "# Define a circuit that has 1 qubit\n",
         "qc = QuantumCircuit(1)\n",
+        "# Apply Hadamard gate on qubit 0, where the numbering starts at 0\n",
         "qc.h(0)\n",
         "\n",
         "print(qc)\n",
         "\n",
         "# Apply the circuit to the statevector\n",
         "sv_after = sv.evolve(qc)\n",
-        "\n",
         "a, b = sv_after.data[0], sv_after.data[1]\n",
         "\n",
         "# Compute spherical coordinates\n",
@@ -778,7 +783,7 @@
         "id": "zkOiOZnxV2xY",
         "outputId": "157ba1bc-7f85-440b-8776-7b620aefff8c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
