--- a/BB84_QKD.ipynb
+++ b/BB84_QKD.ipynb
@@ -17,10 +17,10 @@
         "id": "ae8cfaea"
       },
       "source": [
-        "> Before running the codes, please install qiskit in the Colab terminal by using the commands: \\\\\n",
-        "> pip install qiskit \\\\\n",
-        "> pip install 'qiskit[visualization]' \\\\\n",
-        "> pip install qiskit-aer\n",
+        "> Before running the codes, please install qiskit in the Colab terminal by using the commands:   \n",
+        "> pip install qiskit.  \n",
+        "> pip install 'qiskit[visualization]'.  \n",
+        "> pip install qiskit-aer.  \n",
         "\n",
         "# BB84 Quantum Key Distribution Protocol\n",
         "\n",
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "bd61eba8",
       "metadata": {
         "id": "bd61eba8"
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "id": "d0fadaab",
       "metadata": {
         "id": "d0fadaab"
@@ -98,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "id": "742e1f89",
       "metadata": {
         "colab": {
@@ -281,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "id": "5a5ef3e5",
       "metadata": {
         "colab": {
