--- a/BB84_QKD.ipynb
+++ b/BB84_QKD.ipynb
@@ -18,9 +18,9 @@
       },
       "source": [
         "> Before running the codes, please install qiskit in the Colab terminal by using the commands:   \n",
-        "> pip install qiskit.  \n",
-        "> pip install 'qiskit[visualization]'.  \n",
-        "> pip install qiskit-aer.  \n",
+        "> pip install qiskit  \n",
+        "> pip install 'qiskit[visualization]'  \n",
+        "> pip install qiskit-aer  \n",
         "\n",
         "# BB84 Quantum Key Distribution Protocol\n",
         "\n",
