--- a/Deutsch_Jozsa_Algorithm.ipynb
+++ b/Deutsch_Jozsa_Algorithm.ipynb
@@ -45,13 +45,16 @@
         "\n",
         "The key idea is to use **quantum parallelism and interference** to determine the function type with just one query.\n",
         "\n",
+        "--------\n",
+        "\n",
+        "## Task 1: single-qubit Deutsch-Jozsa algorithm\n",
         "Now, let's explore how to implement the Deutsch-Jozsa algorithm using the Qiskit quantum simulator.\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "42bb8772",
       "metadata": {
         "id": "42bb8772"
@@ -71,7 +74,7 @@
         "id": "e7bc8e39"
       },
       "source": [
-        "## Step 1: Define the Oracle for the function $f(x)$\n",
+        "### Step 1: Define the Oracle for the function $f(x)$\n",
         "\n",
         "The oracle will implement the transformation:\n",
         "\n",
@@ -82,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "a61d5ea0",
       "metadata": {
         "id": "a61d5ea0"
@@ -111,14 +114,14 @@
         "id": "daace628"
       },
       "source": [
-        "## Step 2: Deutsch-Jozsa Circuit Construction\n",
+        "### Step 2: Deutsch-Jozsa Circuit Construction\n",
         "\n",
         "We initialize the qubits to $|0⟩$ and $|1⟩$, then apply Hadamard gates to both, apply the oracle, and apply another Hadamard to the first qubit.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "313e7e36",
       "metadata": {
         "id": "313e7e36"
@@ -153,7 +156,7 @@
         "id": "7d88855a"
       },
       "source": [
-        "## Step 3: Run the circuit and interpret results\n",
+        "### Step 3: Run the circuit and interpret results\n",
         "\n",
         "If the result is always 0, then the function is **constant**.  \n",
         "If the result is 1, then the function is **balanced**.\n"
@@ -161,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "2e38d48c",
       "metadata": {
         "colab": {
@@ -235,17 +238,170 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Interpreting the Results\n",
+        "### Interpreting the Results for Task 1\n",
         "\n",
         "As you can see from the results, when the function $f(x)$ is **constant**, the measurement of qubit 0 always yields **0**.  \n",
         "In contrast, when $f(x)$ is **balanced**, the measurement of qubit 0 always yields **1**.  \n",
         "\n",
-        "This clear distinction is what makes the Deutsch–Jozsa algorithm powerful—it determines the global property of a function (constant or balanced) with a single query."
+        "This clear distinction is what makes the Deutsch–Jozsa algorithm powerful—it determines the global property of a function (constant or balanced) with a single query.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Task 2: Multi-qubit Deutsch-Jozsa Algorithm\n",
+        "\n",
+        "This version generalizes the one-qubit Deutsch-Jozsa algorithm to the multi-qubit case and demonstrates how quantum parallelism and interference can be harnessed to solve certain problems exponentially faster than classical algorithms.\n",
+        "\n",
+        "In the multi-qubit version, the algorithm uses n input qubits and 1 output qubit to evaluate a function $f(x)$. The goal is to determine whether $f(x)$ is constant (same output for all inputs) or balanced (outputs 0 for half the inputs and 1 for the other half).\n",
+        "\n",
+        "This quantum algorithm accomplishes this with a **single oracle query**, embedded within a circuit composed of a fixed number of quantum gates. This allows us to determine with certainty whether $f(x)$ is constant or balanced. In contrast, any classical algorithm would require up to $2^{n-1} + 1$ evaluations in the worst case."
       ],
       "metadata": {
         "id": "2C7ydBzkVDxF"
       },
       "id": "2C7ydBzkVDxF"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from qiskit import QuantumCircuit, transpile\n",
+        "from qiskit_aer import Aer\n",
+        "from qiskit.visualization import plot_histogram\n",
+        "import matplotlib.pyplot as plt\n",
+        "import random\n",
+        "\n",
+        "def deutsch_jozsa_oracle(n, case='constant'):\n",
+        "    \"\"\"\n",
+        "    Create a Deutsch-Jozsa oracle for an n-bit function.\n",
+        "    'constant' returns all 0 or all 1; 'balanced' flips output for half the inputs.\n",
+        "    \"\"\"\n",
+        "    oracle = QuantumCircuit(n + 1)\n",
+        "\n",
+        "    if case == 'constant':\n",
+        "        if random.choice([True, False]):\n",
+        "            oracle.x(n)  # flip output qubit to simulate f(x) = 1\n",
+        "        # else do nothing (f(x) = 0)\n",
+        "\n",
+        "    elif case == 'balanced':\n",
+        "        for i in range(n):\n",
+        "            if random.choice([True, False]):\n",
+        "                oracle.cx(i, n)\n",
+        "\n",
+        "    return oracle\n",
+        "\n",
+        "def deutsch_jozsa_circuit(n, case='constant'):\n",
+        "    \"\"\"\n",
+        "    Build the Deutsch–Jozsa algorithm circuit for n input qubits.\n",
+        "    \"\"\"\n",
+        "    qc = QuantumCircuit(n + 1, n)\n",
+        "\n",
+        "    # Initialize output qubit to |1⟩ and apply Hadamard\n",
+        "    qc.x(n)\n",
+        "    qc.h(n)\n",
+        "\n",
+        "    # Apply Hadamard to all input qubits\n",
+        "    for i in range(n):\n",
+        "        qc.h(i)\n",
+        "\n",
+        "    # Append the oracle\n",
+        "    oracle = deutsch_jozsa_oracle(n, case)\n",
+        "    qc.append(oracle.to_gate(), list(range(n + 1)))\n",
+        "\n",
+        "    # Apply Hadamard again to all input qubits\n",
+        "    for i in range(n):\n",
+        "        qc.h(i)\n",
+        "\n",
+        "    # Measure input qubits\n",
+        "    for i in range(n):\n",
+        "        qc.measure(i, i)\n",
+        "    print(qc)\n",
+        "    return qc\n",
+        "\n",
+        "def run_deutsch_jozsa(n, case='constant'):\n",
+        "    qc = deutsch_jozsa_circuit(n, case)\n",
+        "    backend = Aer.get_backend('aer_simulator')\n",
+        "    transpiled = transpile(qc, backend)\n",
+        "    result = backend.run(transpiled, shots=1024).result()\n",
+        "    counts = result.get_counts()\n",
+        "\n",
+        "    print(f\"\\nResults for a {case.upper()} function with {n} qubits:\")\n",
+        "    print(counts)\n",
+        "    #plot_histogram(counts)\n",
+        "    #plt.title(f\"Deutsch–Jozsa: {case.capitalize()} Function\")\n",
+        "    #plt.show()\n",
+        "\n",
+        "# Example usage\n",
+        "run_deutsch_jozsa(n=6, case='constant')\n",
+        "run_deutsch_jozsa(n=6, case='balanced')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AuKin219amAs",
+        "outputId": "d35ba03a-b161-463f-9d48-71095734948e"
+      },
+      "id": "AuKin219amAs",
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     ┌───┐     ┌──────────────┐┌───┐┌─┐               \n",
+            "q_0: ┤ H ├─────┤0             ├┤ H ├┤M├───────────────\n",
+            "     ├───┤     │              │├───┤└╥┘┌─┐            \n",
+            "q_1: ┤ H ├─────┤1             ├┤ H ├─╫─┤M├────────────\n",
+            "     ├───┤     │              │├───┤ ║ └╥┘┌─┐         \n",
+            "q_2: ┤ H ├─────┤2             ├┤ H ├─╫──╫─┤M├─────────\n",
+            "     ├───┤     │              │├───┤ ║  ║ └╥┘┌─┐      \n",
+            "q_3: ┤ H ├─────┤3 circuit-242 ├┤ H ├─╫──╫──╫─┤M├──────\n",
+            "     ├───┤     │              │├───┤ ║  ║  ║ └╥┘┌─┐   \n",
+            "q_4: ┤ H ├─────┤4             ├┤ H ├─╫──╫──╫──╫─┤M├───\n",
+            "     ├───┤     │              │├───┤ ║  ║  ║  ║ └╥┘┌─┐\n",
+            "q_5: ┤ H ├─────┤5             ├┤ H ├─╫──╫──╫──╫──╫─┤M├\n",
+            "     ├───┤┌───┐│              │└───┘ ║  ║  ║  ║  ║ └╥┘\n",
+            "q_6: ┤ X ├┤ H ├┤6             ├──────╫──╫──╫──╫──╫──╫─\n",
+            "     └───┘└───┘└──────────────┘      ║  ║  ║  ║  ║  ║ \n",
+            "c: 6/════════════════════════════════╩══╩══╩══╩══╩══╩═\n",
+            "                                     0  1  2  3  4  5 \n",
+            "\n",
+            "Results for a CONSTANT function with 6 qubits:\n",
+            "{'000000': 1024}\n",
+            "     ┌───┐     ┌──────────────┐┌───┐┌─┐               \n",
+            "q_0: ┤ H ├─────┤0             ├┤ H ├┤M├───────────────\n",
+            "     ├───┤     │              │├───┤└╥┘┌─┐            \n",
+            "q_1: ┤ H ├─────┤1             ├┤ H ├─╫─┤M├────────────\n",
+            "     ├───┤     │              │├───┤ ║ └╥┘┌─┐         \n",
+            "q_2: ┤ H ├─────┤2             ├┤ H ├─╫──╫─┤M├─────────\n",
+            "     ├───┤     │              │├───┤ ║  ║ └╥┘┌─┐      \n",
+            "q_3: ┤ H ├─────┤3 circuit-247 ├┤ H ├─╫──╫──╫─┤M├──────\n",
+            "     ├───┤     │              │├───┤ ║  ║  ║ └╥┘┌─┐   \n",
+            "q_4: ┤ H ├─────┤4             ├┤ H ├─╫──╫──╫──╫─┤M├───\n",
+            "     ├───┤     │              │├───┤ ║  ║  ║  ║ └╥┘┌─┐\n",
+            "q_5: ┤ H ├─────┤5             ├┤ H ├─╫──╫──╫──╫──╫─┤M├\n",
+            "     ├───┤┌───┐│              │└───┘ ║  ║  ║  ║  ║ └╥┘\n",
+            "q_6: ┤ X ├┤ H ├┤6             ├──────╫──╫──╫──╫──╫──╫─\n",
+            "     └───┘└───┘└──────────────┘      ║  ║  ║  ║  ║  ║ \n",
+            "c: 6/════════════════════════════════╩══╩══╩══╩══╩══╩═\n",
+            "                                     0  1  2  3  4  5 \n",
+            "\n",
+            "Results for a BALANCED function with 6 qubits:\n",
+            "{'110111': 1024}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Interpreting the Results for Task 2\n",
+        "\n",
+        "If the function is constant, the measurement outcome is always the all-zeros bitstring (e.g., '000'). If the function is balanced, the result includes one or more nonzero bitstrings, depending on the specific oracle used. This demonstrates how the Deutsch-Jozsa algorithm can efficiently distinguish between constant and balanced functions in the multi-qubit case, using just one evaluation of the quantum oracle (we only call the function $f(x)$ once)."
+      ],
+      "metadata": {
+        "id": "2JSSE13qdBi3"
+      },
+      "id": "2JSSE13qdBi3"
     }
   ],
   "metadata": {
