--- a/Quantum_tic_tac_toe.ipynb
+++ b/Quantum_tic_tac_toe.ipynb
@@ -68,8 +68,8 @@
         "\n",
         "A cyclic entanglement forms when moves create a loop in the entanglement graph. For example:\n",
         "- Move X₁ entangles square 1 with square 3\n",
-        "- Move O₁ entangles square 3 with square 7\n",
-        "- Move X2 entangles square 7 with square 1\n",
+        "- Move O₁ entangles square 4 with square 7\n",
+        "- Move X₂ entangles square 7 with square 1\n",
         "\n",
         "This creates a cycle: 1 → 3 → 7 → 1\n",
         "\n",
